--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,11 +1,10 @@
 .footer {
   width: fit-content;
-  margin-top: auto;
   margin-left: auto;
   margin-right: auto;
   font-size: 3.2rem;
   letter-spacing: 0.1rem;
-  color: #cccccc;
+  color: #ddd;
 }
 
 .footer span:nth-of-type(2) {
