--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -11,4 +11,6 @@
   padding-bottom: 2rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
