--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -1,3 +1,11 @@
+.search {
+  width: 100%;
+  max-width: 140rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .search__heading {
   font-size: 6.8rem;
   margin: 0;
@@ -13,7 +21,7 @@
   height: auto;
   display: flex;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 4rem;
 }
 
 .search__input {
