--- a/styles/BeerCard.module.css
+++ b/styles/BeerCard.module.css
@@ -4,6 +4,7 @@
   border: solid 0.1rem #e5e1e1;
   border-radius: 1.5rem;
   flex-basis: 28rem;
+  flex-grow: 1;
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 0.35rem 1.5rem 0 rgba(0, 0, 0, 0.37);
   backdrop-filter: blur(0.1rem);
