--- a/styles/BeerCard.module.css
+++ b/styles/BeerCard.module.css
@@ -1,10 +1,12 @@
 .card {
   cursor: pointer;
+  pointer-events: all;
   padding: 2.5rem;
   border: solid 0.1rem #e5e1e1;
   border-radius: 1.5rem;
   flex-basis: 28rem;
-  flex-grow: 1;
+  flex-grow: 0;
+  align-self: stretch;
   background: rgba(255, 255, 255, 0.1);
   box-shadow: 0 0.35rem 1.5rem 0 rgba(0, 0, 0, 0.37);
   backdrop-filter: blur(0.1rem);
@@ -15,6 +17,10 @@
 .card:hover {
   box-shadow: 0 0.7rem 3rem 0 rgba(0, 0, 0, 0.75);
   backdrop-filter: blur(0.25rem);
+}
+
+.card:hover img {
+  filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
 }
 
 .cardTop {
@@ -31,6 +37,7 @@
 
 .cardImageCont img {
   max-height: 20rem;
+  transition: filter 0.25s ease;
 }
 .cardTop p {
   color: #ddd;
