--- a/styles/Modal.module.css
+++ b/styles/Modal.module.css
@@ -94,7 +94,7 @@
   line-height: 1.15;
 }
 
-.pairing button {
+.likeButton {
   margin: 0;
   cursor: pointer;
   appearance: none;
@@ -110,6 +110,7 @@
   transition: filter 0.3s ease;
 }
 
-.pairing button:hover {
+.likeButton.likeButtonActive,
+.likeButton:hover {
   filter: invert(0%);
 }
