--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -34,7 +34,6 @@
 }
 
 .nav__likesCont {
-  border: solid 1px red;
   position: relative;
 }
 
@@ -49,25 +48,69 @@
   filter: brightness(0.5);
   width: 7.5rem;
   height: 6.5rem;
+  padding: 1rem;
 }
 
 .nav__likesList {
+  display: block;
   opacity: 0;
   visibility: hidden;
   font-size: 2.4rem;
   list-style: none;
-  border: solid 1px green;
   position: absolute;
   right: 0;
-  padding-top: 1rem;
+  border-radius: 1.5rem;
+  z-index: 10;
+  max-height: 23.5rem;
+  overflow: auto;
+  transform: translateY(1rem);
+  box-shadow: 0 0.7rem 1.5rem 0 rgba(0, 0, 0, 0.5);
+}
+
+.nav__likesList::-webkit-scrollbar {
+  display: none;
 }
 
 .nav__likesList li {
+  position: relative;
+  cursor: pointer;
   display: flex;
-  justify-content: space-between;
   align-items: flex-end;
   gap: 1.75rem;
+  padding-top: 1.3rem;
+  padding-bottom: 1.3rem;
+  padding-left: 2.4rem;
+  padding-right: 2.4rem;
+  max-width: 30.5rem;
+  background-color: rgba(221, 221, 221, 0.75);
+  transition: all 0.25s ease;
 }
+
+.nav__likesList li:hover {
+  background-color: rgba(221, 221, 221, 0.85);
+}
+
+.nav__likesList li:first-of-type {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+
+.nav__likesList li:last-of-type {
+  border-bottom-left-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+
+.nav__likesList li:not(:last-of-type)::after {
+  position: absolute;
+  content: '';
+  bottom: 0;
+  left: 50%;
+  height: 0.1rem;
+  width: 80%;
+  background-color: #232323;
+  transform: translateX(-50%);
+}
+
 .nav__likesList img {
   max-height: 6rem;
 }
@@ -97,4 +140,18 @@
     width: 6rem;
     height: 5rem;
   }
+}
+
+.nav__likeRemove {
+  cursor: pointer;
+  position: absolute;
+  top: 1.5rem;
+  right: 2.4rem;
+  appearance: none;
+  background: transparent;
+  border: none;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 300.003 300.003' version='1.1' viewBox='0 0 300 300' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m150 0c-82.841 0-150 67.159-150 150 0 82.838 67.157 150 150 150s150-67.165 150-150c0-82.841-67.163-150-150-150zm56.584 207.17c-5.989 5.984-15.691 5.984-21.675 0l-34.132-34.132-35.686 35.686c-5.986 5.984-15.689 5.984-21.672 0-5.989-5.991-5.989-15.691 0-21.68l35.683-35.683-33.224-33.222c-5.984-5.991-5.984-15.691 0-21.678 5.986-5.986 15.691-5.986 21.678 0l33.222 33.222 31.671-31.673c5.986-5.984 15.694-5.986 21.675 0 5.989 5.991 5.989 15.697 0 21.678l-31.668 31.671 34.13 34.132c5.984 5.983 5.987 15.691-2e-3 21.679z' fill='%23691d1d'/%3E%3C/svg%3E%0A");
+  color: rgb(104, 26, 26);
 }
