--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -121,9 +121,9 @@
   visibility: visible;
 }
 
-@media (max-width: 568px) {
+@media (max-width: 768px) {
   .nav__logo {
-    font-size: 3.6rem;
+    font-size: 3.2rem;
   }
   .nav__logo:before {
     margin-right: 1rem;
@@ -136,7 +136,7 @@
     padding-top: 0.75rem;
   }
 
-  .nav__likes {
+  .nav__likesBtn {
     background-size: 6rem 5rem;
     width: 6rem;
     height: 5rem;
