--- a/styles/Search.module.css
+++ b/styles/Search.module.css
@@ -9,7 +9,7 @@
 }
 
 .search__heading {
-  font-size: 6.8rem;
+  font-size: clamp(3.2rem, 4.5vw, 5.5rem) ;
   margin: 0;
   margin-bottom: 2rem;
 }
@@ -85,9 +85,6 @@
 }
 
 @media (max-width: 960px) {
-  .search__heading {
-    font-size: 4.8rem;
-  }
   .search__inputControls {
     height: 3.8rem;
   }
@@ -106,9 +103,6 @@
 }
 
 @media (max-width: 768px) {
-  .search__heading {
-    font-size: 3.2rem;
-  }
 
   .search__inputControls {
     height: 3rem;
@@ -128,9 +122,7 @@
 }
 
 @media (max-width: 375px) {
-  .search__heading {
-    font-size: 2.8rem;
-  }
+
   .search__inputControls {
     height: 3.35rem;
   }
