--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,8 @@ body {
   --side-gutter: 2rem;
 
   --nav-height: 13.5rem;
+
+  --swiper-navigation-size: 4rem;
 }
 
 a {
@@ -38,4 +40,96 @@ textarea:focus,
 input:focus {
   outline-width: 0.25rem;
   outline-color: grey;
+}
+
+/* Swiper */
+.swiper-button-prev {
+  position: relative;
+  cursor: pointer;
+  /* margin-left: -2rem; */
+  width: 5rem;
+  height: 5rem;
+  border-radius: 100%;
+  background-color: rgba(0, 0, 0, 0.55);
+  border: 0;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 185.343 185.343' version='1.1' viewBox='0 0 185.34 185.34' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m51.707 185.34c-2.741 0-5.493-1.044-7.593-3.149-4.194-4.194-4.194-10.981 0-15.175l74.352-74.347-74.352-74.352c-4.194-4.194-4.194-10.987 0-15.175 4.194-4.194 10.987-4.194 15.18 0l81.934 81.934c4.194 4.194 4.194 10.987 0 15.175l-81.934 81.939c-2.093 2.1-4.84 3.15-7.587 3.15z' fill='%23FFFFFF60'/%3E%3C/svg%3E%0A");
+  background-size: 1.5rem 1.5rem;
+  background-repeat: no-repeat;
+  background-position: 55% 50%;
+  transform: rotate(180deg);
+  transition: all 0.25s ease;
+  position: absolute;
+  left: 1.5rem !important;
+  top: 55% !important;
+  transform: translateY(-50%) rotate(180deg);
+  width: calc(var(--swiper-navigation-size)) !important;
+  display: none !important;
+}
+
+.swiper-button-prev::after {
+  display: none;
+}
+
+.swiper-button-prev:hover {
+  background-color: rgba(0, 0, 0, 0.65);
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 185.343 185.343' version='1.1' viewBox='0 0 185.34 185.34' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m51.707 185.34c-2.741 0-5.493-1.044-7.593-3.149-4.194-4.194-4.194-10.981 0-15.175l74.352-74.347-74.352-74.352c-4.194-4.194-4.194-10.987 0-15.175 4.194-4.194 10.987-4.194 15.18 0l81.934 81.934c4.194 4.194 4.194 10.987 0 15.175l-81.934 81.939c-2.093 2.1-4.84 3.15-7.587 3.15z' fill='%23FFFFFF80'/%3E%3C/svg%3E%0A");
+}
+
+.swiper-button-next {
+  cursor: pointer;
+  /* margin-right: -1.75rem; */
+  width: 5rem;
+  height: 5rem;
+  border-radius: 100%;
+  background-color: rgba(0, 0, 0, 0.55);
+  border: 0;
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 185.343 185.343' version='1.1' viewBox='0 0 185.34 185.34' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m51.707 185.34c-2.741 0-5.493-1.044-7.593-3.149-4.194-4.194-4.194-10.981 0-15.175l74.352-74.347-74.352-74.352c-4.194-4.194-4.194-10.987 0-15.175 4.194-4.194 10.987-4.194 15.18 0l81.934 81.934c4.194 4.194 4.194 10.987 0 15.175l-81.934 81.939c-2.093 2.1-4.84 3.15-7.587 3.15z' fill='%23FFFFFF60'/%3E%3C/svg%3E%0A");
+  background-size: 1.5rem 1.5rem;
+  background-repeat: no-repeat;
+  background-position: 55% 50%;
+  transform: rotate(180deg);
+  transition: all 0.25s ease;
+  position: absolute;
+  right: 1.5rem !important;
+  top: 55% !important;
+  transform: translateY(-50%);
+  width: calc(var(--swiper-navigation-size)) !important;
+  font-size: 1rem !important;
+  display: none !important;
+}
+
+.swiper-button-next:after {
+  display: none;
+}
+
+.swiper-button-next:hover {
+  background-color: rgba(0, 0, 0, 0.65);
+  background-image: url("data:image/svg+xml,%3C%3Fxml version='1.0' encoding='UTF-8'%3F%3E%3Csvg enable-background='new 0 0 185.343 185.343' version='1.1' viewBox='0 0 185.34 185.34' xml:space='preserve' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m51.707 185.34c-2.741 0-5.493-1.044-7.593-3.149-4.194-4.194-4.194-10.981 0-15.175l74.352-74.347-74.352-74.352c-4.194-4.194-4.194-10.987 0-15.175 4.194-4.194 10.987-4.194 15.18 0l81.934 81.934c4.194 4.194 4.194 10.987 0 15.175l-81.934 81.939c-2.093 2.1-4.84 3.15-7.587 3.15z' fill='%23FFFFFF80'/%3E%3C/svg%3E%0A");
+}
+
+@media only screen and (min-width: 480px) {
+  /* styles for browsers larger than 960px; */
+  .swiper-button-prev {
+    display: block !important;
+  }
+  .swiper-button-next {
+    display: block !important;
+  }
+}
+
+.swiper-button-disabled {
+  visibility: hidden;
+}
+
+.swiper {
+  padding: 5rem 1rem !important;
+}
+
+.swiper-wrapper {
+  display: flex;
+}
+
+.swiper-slide {
+  justify-content: center;
+  display: flex;
 }
